# paper-icon-theme

./: meson.build
src/symlinks/: gnome-3_36.py
